--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
             <img src="images/image-seven.jpg" height="550px"
             width="395px">
         </div>
+
+        <div class="first-image">
+            <img src="images/image-eight-ru.jpg" height="550px"
+            width="395px">
+        </div>
     </div>
 
 
