--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Upradge | Nails</title>
+    <title>Upgrade | Services</title>
 </head>
 <body>
     
@@ -23,28 +23,6 @@
 
         <div class="first-image">
             <img src="images/image-three.jpg" height="550px"
-            width="395px">
-        </div>
-
-
-
-        <div class="first-image">
-            <img src="images/image-four.jpg" height="550px"
-            width="395px">
-        </div>
-
-
-
-
-        <div class="first-image">
-            <img src="images/image-five.jpg" height="550px"
-            width="395px">
-        </div>
-
-
-
-        <div class="first-image">
-            <img src="images/image-six.jpg" height="550px"
             width="395px">
         </div>
 
